force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/Apttus_Config2__LookupFieldSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controls lookup field behavior in Apttus CPQ.</description>
    <label>Lookup Field Settings</label>
</CustomObject>