force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__DefaultFlagField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultFlagField__c</fullName>
    <description>Field API from the Junction object to determine the default value of a lookup field, this field must be a checkbox.</description>
    <inlineHelpText>Field API from the Junction object to determine the default value of a lookup field, this field must be a checkbox.</inlineHelpText>
    <label>Junction Default Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>