force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__DisplayColumns__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayColumns__c</fullName>
    <description>Configure the columns of the Lookup popup Fields from the Lookup Object which you&apos;d like to display by populating with the fields APIs from the Lookup Object such as Name__c, additional can be added comma-separated without spaces.</description>
    <inlineHelpText>Configure the columns of the Lookup popup Fields from the Lookup Object which you&apos;d like to display by populating with the fields APIs from the Lookup Object such as Name__c, additional can be added comma-separated without spaces.</inlineHelpText>
    <label>Lookup Display Columns</label>
    <type>TextArea</type>
</CustomField>