force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__EnableQuickView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EnableQuickView__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field controls how Lookup field is displayed in UI.</description>
    <inlineHelpText>This field controls how Lookup field is displayed in UI.</inlineHelpText>
    <label>Enable Quick View</label>
    <type>Checkbox</type>
</CustomField>