force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__FilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FilterCriteria__c</fullName>
    <description>Formula to filter lookup values; Formulas are built with with left as a lookup or junction and right as the object. For example Account__c.City__c = Apttus_Config2__Lineitem__c.City__c, show accounts with cities with the same Line item City.</description>
    <inlineHelpText>Formula to filter lookup values; Formulas are built with with left as a lookup or junction and right as the object. For example Account__c.City__c = Apttus_Config2__Lineitem__c.City__c, show accounts with cities with the same Line item City.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>