force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__LookupFieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LookupFieldName__c</fullName>
    <description>API name of the Lookup field on the Line Item or Product Attribute Value Object defined under Object Name.</description>
    <inlineHelpText>API name of the Lookup field on the Line Item or Product Attribute Value Object defined under Object Name.</inlineHelpText>
    <label>Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>