force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__LookupRecordLimit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LookupRecordLimit__c</fullName>
    <description>The maximum number of records to query for the lookup field dropdown. Default value is 200 up to maximum of 1000.</description>
    <inlineHelpText>The maximum number of records to query for the lookup field dropdown. Default value is 200 up to maximum of 1000.</inlineHelpText>
    <label>Lookup Record Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>