force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ObjectName__c</fullName>
    <description>The API name of the object where the lookup field exists. Valid entries are Apttus_Config2__LineItem__c or Apttus_Config2__ProductAttributeValue__c.</description>
    <inlineHelpText>The API name of the object where the lookup field exists. Valid entries are Apttus_Config2__LineItem__c or Apttus_Config2__ProductAttributeValue__c.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>