force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__SourceField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceField__c</fullName>
    <description>Field on the junction object which you would like to filter the lookup field by.</description>
    <inlineHelpText>Field on the junction object which you would like to filter the lookup field by.</inlineHelpText>
    <label>Junction Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>