force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/fields/Apttus_Config2__SourceObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceObject__c</fullName>
    <description>The junction object which you would like to filter the lookup values. This is a custom object that you can define to filter the values which do not exist on the Lookup Object itself.</description>
    <inlineHelpText>The junction object which you would like to filter the lookup values. This is a custom object that you can define to filter the values which do not exist on the Lookup Object itself.</inlineHelpText>
    <label>Junction Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>