force-app/main/default/objects/Apttus_Config2__LookupFieldSettings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__ObjectName__c</columns>
    <columns>Apttus_Config2__LookupFieldName__c</columns>
    <columns>Apttus_Config2__DisplayColumns__c</columns>
    <columns>Apttus_Config2__FilterCriteria__c</columns>
    <columns>Apttus_Config2__FilterCriteria2__c</columns>
    <columns>Apttus_Config2__LookupRecordLimit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>